# src-health-hub

./: .gitignore  README.md  article.md  article.qmd  pyproject.toml
data/: EXECoutput.xlsx  EXECoutput_with_causes.xlsx  SOK-biodiversity-en.txt  StateOfKnowledgeEXEC.txt  WHO_noncom.txt  causal_links_WHO_CBD.docx
notebooks/: PDF_excel_GPT.ipynb  api_responses.md  biodiversity-llm.ipynb
