[project]
name = "manuscript-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "openai>=1.54.5",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
]
